First commited as before_35377_rev11